@@ -1,16 +1,17 @@
 package org.jabref.logic.exporter;
 
 import java.io.IOException;
-import java.nio.charset.Charset;
 import java.nio.file.Path;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Stream;
 
-import org.jabref.logic.bibtex.FieldContentFormatterPreferences;
-import org.jabref.logic.bibtex.FieldWriterPreferences;
+import javafx.collections.FXCollections;
+
+import org.jabref.logic.bibtex.FieldPreferences;
 import org.jabref.logic.importer.ImportFormatPreferences;
 import org.jabref.logic.importer.fileformat.PdfEmbeddedBibFileImporter;
+import org.jabref.logic.journals.JournalAbbreviationRepository;
 import org.jabref.model.database.BibDatabase;
 import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.database.BibDatabaseMode;
@@ -31,6 +32,7 @@ import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.Answers;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
@@ -44,16 +46,12 @@ class EmbeddedBibFilePdfExporterTest {
     private static BibEntry toral2006 = new BibEntry(StandardEntryType.Article);
     private static BibEntry vapnik2000 = new BibEntry(StandardEntryType.Article);
 
-    private PdfEmbeddedBibFileImporter importer;
     private EmbeddedBibFilePdfExporter exporter;
-    private ImportFormatPreferences importFormatPreferences;
-    private BibDatabaseMode bibDatabaseMode;
-    private BibEntryTypesManager bibEntryTypesManager;
-    private FieldWriterPreferences fieldWriterPreferences;
-    private Charset encoding;
+
+    private PdfEmbeddedBibFileImporter importer;
 
     private BibDatabaseContext databaseContext;
-    private BibDatabase dataBase;
+    private JournalAbbreviationRepository abbreviationRepository;
     private FilePreferences filePreferences;
 
     private static void initBibEntries() throws IOException {
@@ -79,7 +77,7 @@ class EmbeddedBibFilePdfExporterTest {
         olly2018.setField(StandardField.URL, "https://www.olly2018.edu");
 
         LinkedFile linkedFile = createDefaultLinkedFile("existing.pdf", tempDir);
-        olly2018.setFiles(Arrays.asList(linkedFile));
+        olly2018.setFiles(List.of(linkedFile));
 
         toral2006.setField(StandardField.AUTHOR, "Toral, Antonio and Munoz, Rafael");
         toral2006.setField(StandardField.TITLE, "A proposal to automatically build and maintain gazetteers for Named Entity Recognition by using Wikipedia");
@@ -89,7 +87,7 @@ class EmbeddedBibFilePdfExporterTest {
         toral2006.setField(StandardField.OWNER, "Ich");
         toral2006.setField(StandardField.URL, "www.url.de");
 
-        toral2006.setFiles(Arrays.asList(new LinkedFile("non-existing", "path/to/nowhere.pdf", "PDF")));
+        toral2006.setFiles(List.of(new LinkedFile("non-existing", "path/to/nowhere.pdf", "PDF")));
 
         vapnik2000.setCitationKey("vapnik2000");
         vapnik2000.setField(StandardField.TITLE, "The Nature of Statistical Learning Theory");
@@ -104,24 +102,27 @@ class EmbeddedBibFilePdfExporterTest {
      */
     @BeforeEach
     void setUp() throws IOException {
-        encoding = Charset.defaultCharset();
+        abbreviationRepository = mock(JournalAbbreviationRepository.class);
 
         filePreferences = mock(FilePreferences.class);
-        when(filePreferences.getUser()).thenReturn(tempDir.toAbsolutePath().toString());
+        when(filePreferences.getUserAndHost()).thenReturn(tempDir.toAbsolutePath().toString());
         when(filePreferences.shouldStoreFilesRelativeToBibFile()).thenReturn(false);
 
-        importFormatPreferences = mock(ImportFormatPreferences.class, Answers.RETURNS_DEEP_STUBS);
-        when(importFormatPreferences.getFieldContentFormatterPreferences().getNonWrappableFields()).thenReturn(List.of());
+        BibDatabaseMode bibDatabaseMode = BibDatabaseMode.BIBTEX;
+        BibEntryTypesManager bibEntryTypesManager = new BibEntryTypesManager();
+        FieldPreferences fieldPreferences = new FieldPreferences(
+                true,
+                List.of(StandardField.MONTH),
+                Collections.emptyList());
 
-        bibDatabaseMode = BibDatabaseMode.BIBTEX;
-        bibEntryTypesManager = new BibEntryTypesManager();
-        FieldWriterPreferences fieldWriterPreferences = new FieldWriterPreferences(true, List.of(StandardField.MONTH), new FieldContentFormatterPreferences());
+        exporter = new EmbeddedBibFilePdfExporter(bibDatabaseMode, bibEntryTypesManager, fieldPreferences);
 
+        ImportFormatPreferences importFormatPreferences = mock(ImportFormatPreferences.class, Answers.RETURNS_DEEP_STUBS);
+        when(importFormatPreferences.fieldPreferences().getNonWrappableFields()).thenReturn(FXCollections.emptyObservableList());
         importer = new PdfEmbeddedBibFileImporter(importFormatPreferences);
-        exporter = new EmbeddedBibFilePdfExporter(bibDatabaseMode, bibEntryTypesManager, fieldWriterPreferences);
 
         databaseContext = new BibDatabaseContext();
-        dataBase = databaseContext.getDatabase();
+        BibDatabase dataBase = databaseContext.getDatabase();
 
         initBibEntries();
         dataBase.insertEntry(olly2018);
@@ -132,13 +133,13 @@ class EmbeddedBibFilePdfExporterTest {
     @ParameterizedTest
     @MethodSource("provideBibEntriesWithValidPdfFileLinks")
     void successfulExportToAllFilesOfEntry(BibEntry bibEntryWithValidPdfFileLink) throws Exception {
-        assertTrue(exporter.exportToAllFilesOfEntry(databaseContext, filePreferences, bibEntryWithValidPdfFileLink, Arrays.asList(olly2018)));
+        assertTrue(exporter.exportToAllFilesOfEntry(databaseContext, filePreferences, bibEntryWithValidPdfFileLink, List.of(olly2018), abbreviationRepository));
     }
 
     @ParameterizedTest
     @MethodSource("provideBibEntriesWithInvalidPdfFileLinks")
     void unsuccessfulExportToAllFilesOfEntry(BibEntry bibEntryWithValidPdfFileLink) throws Exception {
-        assertFalse(exporter.exportToAllFilesOfEntry(databaseContext, filePreferences, bibEntryWithValidPdfFileLink, Arrays.asList(olly2018)));
+        assertFalse(exporter.exportToAllFilesOfEntry(databaseContext, filePreferences, bibEntryWithValidPdfFileLink, List.of(olly2018), abbreviationRepository));
     }
 
     public static Stream<Arguments> provideBibEntriesWithValidPdfFileLinks() {
@@ -152,13 +153,17 @@ class EmbeddedBibFilePdfExporterTest {
     @ParameterizedTest
     @MethodSource("providePathsToValidPDFs")
     void successfulExportToFileByPath(Path path) throws Exception {
-        assertTrue(exporter.exportToFileByPath(databaseContext, dataBase, filePreferences, path));
+        assertTrue(exporter.exportToFileByPath(databaseContext, filePreferences, path, abbreviationRepository));
     }
 
     @ParameterizedTest
     @MethodSource("providePathsToInvalidPDFs")
     void unsuccessfulExportToFileByPath(Path path) throws Exception {
-        assertFalse(exporter.exportToFileByPath(databaseContext, dataBase, filePreferences, path));
+        assertFalse(exporter.exportToFileByPath(databaseContext, filePreferences, path, abbreviationRepository));
+    }
+
+    public static Stream<Arguments> providePathToNewPDFs() {
+        return Stream.of(Arguments.of(tempDir.resolve("original.pdf").toAbsolutePath()));
     }
 
     public static Stream<Arguments> providePathsToValidPDFs() {
@@ -180,8 +185,26 @@ class EmbeddedBibFilePdfExporterTest {
             pdf.save(pdfFile.toAbsolutePath().toString());
         }
 
-        LinkedFile linkedFile = new LinkedFile("A linked pdf", pdfFile, "PDF");
+        return new LinkedFile("A linked pdf", pdfFile, "PDF");
+    }
 
-        return linkedFile;
+    @ParameterizedTest
+    @MethodSource("providePathToNewPDFs")
+    public void testRoundtripExportImport(Path path) throws Exception {
+        BibEntry expected = new BibEntry(StandardEntryType.Misc)
+                .withCitationKey("test")
+                .withField(StandardField.AUTHOR, "Test Author")
+                .withField(StandardField.TITLE, "Test Title")
+                .withField(StandardField.URL, "http://example.com")
+                .withField(StandardField.DATE, "2020-10-14");
+        expected.setChanged(true);
+
+        List<BibEntry> expectedEntries = Collections.singletonList(expected);
+
+        exporter.export(databaseContext, path, expectedEntries);
+
+        List<BibEntry> importedEntries = importer.importDatabase(path).getDatabase().getEntries();
+
+        assertEquals(expectedEntries, importedEntries);
     }
 }
